------------------------------
AmiSSL Open Source - ChangeLog
------------------------------

$Id$
$URL$

2014-09-03 Jens Maus <mail@jens-maus.de>

  * misc: after finally being able to convert the os3 sfd file to proper clib and
    inline files applied some changes to get AmiSSL compiled for OS3/gcc. At least
    it compiles now until the first test binary. So lets see how fast we can solve
    that.

2014-08-27 Thore Böckelmann <tboeckel@gmx.de>

  * misc: lots of changes to get this beast buildable for AmigaOS3. This is
    definitely work in progress and not yet finished. At least libcmt is built
    successfully now, although there are still lots of warnings.

2014-08-17 Jens Maus <mail@jens-maus.de>

  * misc: merged the OpenSSL 1.0.1i vendor branch onto the trunk and adapted all
    AmiSSL sources accordingly.

2014-07-11 Jens Maus <mail@jens-maus.de>

  * Makefile, misc: largely reworked the top-level Makefile so that we will only have
    a single Makefile for compiling AmiSSL out-of-the-box rather than having to run
    several kind of shell scripts for different platforms and different debugging
    levels. This makefile now stores automatically generated data (object files and
    binary files in seperate directories based on the platform AmiSSL is compiled for).
  * src: fixed a bunch of compiler warning appearing with -W -Wall.

2014-07-10 Jens Maus <mail@jens-maus.de>

  * openssl/util/pl/OS4.pl: enabled -Wall and fixed a whole bunch of compiler warnings.
  * amissl_library.c, amissl_glue.c: removed the functionality to use an environment
    variable to override the SSL protocol version even if an application directly uses
    a SSLv23_XXXX_method() function. While this functionality was really rarely used
    it also contradicts what an application expects these functions to do. So if an
    application want to explictly force a protocol version to be used it ought to