@@ -5,9 +5,6 @@
 /* WARNING: Generated automatically from opensslconf.h.in by Configure. */
 
 /* OpenSSL was configured with the following options: */
-#ifndef OPENSSL_SYSNAME_AMIGAOS3
-# define OPENSSL_SYSNAME_AMIGAOS3
-#endif
 #ifndef OPENSSL_DOING_MAKEDEPEND
 
 
